[package]
name = "api-tools"
version = "0.2.0"
edition = "2024"
authors = ["Fabien Bellanger <valentil@gmail.com>"]
description = "An API tools library for Rust"
documentation = "https://docs.rs/api-tools"
homepage = "https://github.com/fabienbellanger/api-tools"
keywords = ["API", "Axum", "Layer", "Metrics", "Server", "Tools"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fabienbellanger/api-tools"
rust-version = "1.85.1"

[features]
axum = []
prometheus = ["dep:metrics", "dep:metrics-exporter-prometheus"]
default = []
full = [
    "axum",
    "prometheus",
]

[dependencies]

# Errors
thiserror = "2.0.12"

# API Server
axum = "0.8.4"
http-auth-basic = "0.3.5"
hyper = "1.6.0"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["cors", "fs", "request-id", "util"] }

# Logs
tracing = "0.1.41"

# Serde
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"

# Metrics
metrics = { version = "0.24.1", optional = true }
metrics-exporter-prometheus = { version = "0.17.0", optional = true }

bytes = "1.10.1"
bytesize = "2.0.1"
chrono = { version = "0.4.41", features = ["clock", "std", "serde"], default-features = false }
chrono-tz = "0.10.3"
futures = "0.3.31"
mime = "0.3.17"
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }

[dev-dependencies]
base64 = "0.22.1"

[package.metadata.docs.rs]
all-features = true
