[package]
name = "api-tools"
version = "0.6.1"
authors = ["Fabien Bellanger <valentil@gmail.com>"]
description = "An API tools library for Rust"
edition = "2024"
rust-version = "1.85.1"
keywords = ["API", "Axum", "Layer", "Metrics", "Tools"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/api-tools"
homepage = "https://github.com/fabienbellanger/api-tools"
repository = "https://github.com/fabienbellanger/api-tools"

[features]
axum = []
default = []
full = [
    "axum",
    "prometheus",
]
prometheus = ["dep:metrics", "dep:metrics-exporter-prometheus", "dep:sysinfo"]

[dependencies]

# Errors
thiserror = "2.0.15"

# API Server
axum = "0.8.4"
http-auth-basic = "0.3.5"
hyper = "1.7.0"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["cors", "fs", "request-id", "util", "set-header"] }

# Logs
tracing = "0.1.41"
tracing-opentelemetry = "0.31.0"
opentelemetry = "0.30.0"

# Serde
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_urlencoded = "0.7.1"

# Metrics
metrics = { version = "0.24.2", optional = true }
metrics-exporter-prometheus = { version = "0.17.2", optional = true }
sysinfo = { version = "0.36.1", optional = true }

bytes = "1.10.1"
bytesize = "2.0.1"
chrono = { version = "0.4.41", features = ["clock", "std", "serde"], default-features = false }
chrono-tz = "0.10.4"
futures = "0.3.31"
mime = "0.3.17"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
jsonwebtoken = "9.3.1"

[dev-dependencies]
base64 = "0.22.1"

[package.metadata.docs.rs]
all-features = true
